# ai-scholar-toolbox

./: .gitignore  LICENSE  README.md  Scholar78kSearch.py  ScholarGsSearch.py  ScholarSearch.py  TwitterSearch.py  __init__.py  openreview.ipynb  openreviewdirect.ipynb  process.py  setup.cfg  setup.py  todo.md  twitter_search.ipynb  twitter_search.py  user_agents.py  utils.py
ai-scholar-toolbox/: setup.cfg
ai-scholar-toolbox/ai-scholar-toolbox/: __init__.py  process.py
ai_scholar_toolbox/: ScholarSearch.py
notebooks/: check_similarity.ipynb
review_data/: README.md  review_scores_after_rebuttal.csv  review_scores_before_rebuttal.csv  test.json  test2.json
src/: Scholar78kSearch.py
tmp/: gs_citations_20220728.csv  gs_citations_20220728v2_top3.csv  gs_citations_20220729v3.csv  id_list.json  id_list_0728v2.json  log_0728v2  log_0729v3.txt  resp_list.json  resp_list_0728v2.json  resp_list_0729v3.json  resp_list_new.json  result.txt  url_list.json
