[metadata]
name = ai_scholar_toolbox
version = 0.0.1
author = Jiarui Liu
author_email = ljrjerry@umich.edu
description = Find Google Scholar Profiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/causalNLP/ai-scholar-toolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7, <3.8
include_package_data = False
include_requires =
    bs4 ==0.0.1
    selenium ==4.3.0
    requests
    pandas
    numpy